Fix dropwdown nav spacing

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -45,6 +45,11 @@ $dunzoBlue: #2d90ff;
     line-height:52px;
   }
 
+  .nav > li > a {
+    padding: 18px 15px 10px;
+  }
+
+
   .brand {
     font-size: 25px;
     font-style: italic;
